--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^6.3.16",
     "google-map-react": "^2.1.10",
     "react": "^18.1.0",
     "react-bootstrap": "^1.4.3",
