--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.16",
     "google-map-react": "^2.1.10",
+    "mdb-react-ui-kit": "^4.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^18.1.0",
@@ -21,6 +23,7 @@
     "react-spinners": "^0.12.0",
     "react-sticky": "^6.0.3",
     "react-toastify": "^9.0.3",
+    "sass": "^1.53.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "uikit": "^3.14.3",
